--- a/RayCarrot.WPF/RayCarrot.WPF.csproj
+++ b/RayCarrot.WPF/RayCarrot.WPF.csproj
@@ -111,8 +111,8 @@
     <Reference Include="RayCarrot.CarrotFramework.IO, Version=1.0.28.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\RayCarrot.CarrotFramework.IO.1.0.28\lib\netstandard2.0\RayCarrot.CarrotFramework.IO.dll</HintPath>
     </Reference>
-    <Reference Include="RayCarrot.CarrotFramework.UI, Version=1.0.24.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\RayCarrot.CarrotFramework.UI.1.0.24\lib\netstandard2.0\RayCarrot.CarrotFramework.UI.dll</HintPath>
+    <Reference Include="RayCarrot.CarrotFramework.UI, Version=1.0.25.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\RayCarrot.CarrotFramework.UI.1.0.25\lib\netstandard2.0\RayCarrot.CarrotFramework.UI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -204,6 +204,7 @@
     <Compile Include="Design\DesignTimeVM.cs" />
     <Compile Include="Framework\DefaultWPFBrowseUIManager.cs" />
     <Compile Include="Framework\DefaultWPFMessageUIManager.cs" />
+    <Compile Include="Framework\WPFRegistryPaths.cs" />
     <Compile Include="Helpers\BaseAttachedProperty.cs" />
     <Compile Include="Helpers\BaseValueConverter.cs" />
     <Compile Include="ValidationRules\Files and Directories\DirectoryExistsAndNotEmptyValidationRule.cs" />
@@ -282,12 +283,12 @@
     <Resource Include="Controls\Dialogs\RegistryBrowser\Icons\Hidden Folder.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\packages\Fody.3.2.9\build\Fody.targets" Condition="Exists('..\..\packages\Fody.3.2.9\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\Fody.3.2.9\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Fody.3.2.9\build\Fody.targets'))" />
     <Error Condition="!Exists('..\..\packages\PropertyChanged.Fody.2.5.13\build\PropertyChanged.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\PropertyChanged.Fody.2.5.13\build\PropertyChanged.Fody.props'))" />
+    <Error Condition="!Exists('..\..\packages\Fody.3.2.11\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Fody.3.2.11\build\Fody.targets'))" />
   </Target>
+  <Import Project="..\..\packages\Fody.3.2.11\build\Fody.targets" Condition="Exists('..\..\packages\Fody.3.2.11\build\Fody.targets')" />
 </Project>
