--- a/RayCarrot.WPF/RayCarrot.WPF.csproj
+++ b/RayCarrot.WPF/RayCarrot.WPF.csproj
@@ -105,11 +105,11 @@
     <Reference Include="PropertyChanged, Version=2.5.13.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
       <HintPath>..\..\packages\PropertyChanged.Fody.2.5.13\lib\net452\PropertyChanged.dll</HintPath>
     </Reference>
-    <Reference Include="RayCarrot.CarrotFramework, Version=1.0.28.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\RayCarrot.CarrotFramework.1.0.28\lib\netstandard2.0\RayCarrot.CarrotFramework.dll</HintPath>
+    <Reference Include="RayCarrot.CarrotFramework, Version=1.0.30.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\RayCarrot.CarrotFramework.1.0.30\lib\netstandard2.0\RayCarrot.CarrotFramework.dll</HintPath>
     </Reference>
-    <Reference Include="RayCarrot.CarrotFramework.IO, Version=1.0.28.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\RayCarrot.CarrotFramework.IO.1.0.28\lib\netstandard2.0\RayCarrot.CarrotFramework.IO.dll</HintPath>
+    <Reference Include="RayCarrot.CarrotFramework.IO, Version=1.0.29.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\RayCarrot.CarrotFramework.IO.1.0.29\lib\netstandard2.0\RayCarrot.CarrotFramework.IO.dll</HintPath>
     </Reference>
     <Reference Include="RayCarrot.CarrotFramework.UI, Version=1.0.25.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\RayCarrot.CarrotFramework.UI.1.0.25\lib\netstandard2.0\RayCarrot.CarrotFramework.UI.dll</HintPath>
@@ -169,17 +169,21 @@
     <Compile Include="Controls\BrowseBox\BrowseTypes.cs" />
     <Compile Include="Controls\BrowseBox\BrowseValidationRules.cs" />
     <Compile Include="Controls\BrowseControl.cs" />
-    <Compile Include="Framework\DefaultWPFRegistryBrowseUIManager.cs" />
-    <Compile Include="Framework\FrameworkConstructionExtensions.cs" />
-    <Compile Include="Framework\IWPFStyle.cs" />
-    <Compile Include="Controls\Dialogs\RegistryBrowser\ViewModels\FavoritesItemViewModel.cs" />
-    <Compile Include="Controls\Dialogs\RegistryBrowser\ViewModels\RegistryValueViewModel.cs" />
+    <Compile Include="Controls\Dialogs\IDialogBaseControl.cs" />
+    <Compile Include="Framework\Implementations\WindowDialogBaseManager.cs" />
+    <Compile Include="Framework\Interfaces\IDialogBaseManager.cs" />
+    <Compile Include="Framework\RCFWPF.cs" />
+    <Compile Include="Extensions\DialogBaseControlExtensions.cs" />
     <Compile Include="Controls\Dialogs\StringInputDialog\StringInputDialog.xaml.cs">
       <DependentUpon>StringInputDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Framework\Implementations\DefaultWPFRegistryBrowseUIManager.cs" />
+    <Compile Include="Framework\FrameworkConstructionExtensions.cs" />
+    <Compile Include="Framework\Interfaces\IWPFStyle.cs" />
+    <Compile Include="Controls\Dialogs\RegistryBrowser\ViewModels\FavoritesItemViewModel.cs" />
+    <Compile Include="Controls\Dialogs\RegistryBrowser\ViewModels\RegistryValueViewModel.cs" />
     <Compile Include="Controls\Dialogs\StringInputDialog\ViewModels\StringInputResult.cs" />
     <Compile Include="Controls\Dialogs\StringInputDialog\ViewModels\StringInputViewModel.cs" />
-    <Compile Include="Controls\DialogVMWindow.cs" />
     <Compile Include="Controls\Dialogs\DriveSelectionDialog\DriveSelectionDialog.xaml.cs">
       <DependentUpon>DriveSelectionDialog.xaml</DependentUpon>
     </Compile>
@@ -205,8 +209,8 @@
     </Compile>
     <Compile Include="Controls\Dialogs\DialogMessageBox\ViewModels\DialogMessageViewModel.cs" />
     <Compile Include="Design\DesignTimeVM.cs" />
-    <Compile Include="Framework\DefaultWPFBrowseUIManager.cs" />
-    <Compile Include="Framework\DefaultWPFMessageUIManager.cs" />
+    <Compile Include="Framework\Implementations\DefaultWPFBrowseUIManager.cs" />
+    <Compile Include="Framework\Implementations\DefaultWPFMessageUIManager.cs" />
     <Compile Include="Framework\WPFRegistryPaths.cs" />
     <Compile Include="Helpers\BaseAttachedProperty.cs" />
     <Compile Include="Helpers\BaseValueConverter.cs" />
@@ -268,8 +272,8 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\Dialogs\StringInputDialog\StringInputDialog.xaml">
-      <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -286,12 +290,5 @@
     <Resource Include="Controls\Dialogs\RegistryBrowser\Icons\Hidden Folder.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\PropertyChanged.Fody.2.5.13\build\PropertyChanged.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\PropertyChanged.Fody.2.5.13\build\PropertyChanged.Fody.props'))" />
-    <Error Condition="!Exists('..\..\packages\Fody.3.2.12\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Fody.3.2.12\build\Fody.targets'))" />
-  </Target>
   <Import Project="..\..\packages\Fody.3.2.12\build\Fody.targets" Condition="Exists('..\..\packages\Fody.3.2.12\build\Fody.targets')" />
 </Project>
