--- a/RayCarrot.WPF/RayCarrot.WPF.csproj
+++ b/RayCarrot.WPF/RayCarrot.WPF.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\packages\PropertyChanged.Fody.2.5.13\build\PropertyChanged.Fody.props" Condition="Exists('..\..\packages\PropertyChanged.Fody.2.5.13\build\PropertyChanged.Fody.props')" />
+  <Import Project="..\..\packages\PropertyChanged.Fody.2.5.14\build\PropertyChanged.Fody.props" Condition="Exists('..\..\packages\PropertyChanged.Fody.2.5.14\build\PropertyChanged.Fody.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -102,14 +102,14 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="PropertyChanged, Version=2.5.13.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\PropertyChanged.Fody.2.5.13\lib\net452\PropertyChanged.dll</HintPath>
+    <Reference Include="PropertyChanged, Version=2.5.14.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\PropertyChanged.Fody.2.5.14\lib\net452\PropertyChanged.dll</HintPath>
     </Reference>
     <Reference Include="RayCarrot.CarrotFramework, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\RayCarrot.CarrotFramework.1.1.0\lib\netstandard2.0\RayCarrot.CarrotFramework.dll</HintPath>
     </Reference>
-    <Reference Include="RayCarrot.CarrotFramework.IO, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\RayCarrot.CarrotFramework.IO.1.1.0\lib\netstandard2.0\RayCarrot.CarrotFramework.IO.dll</HintPath>
+    <Reference Include="RayCarrot.CarrotFramework.IO, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\RayCarrot.CarrotFramework.IO.1.1.1\lib\netstandard2.0\RayCarrot.CarrotFramework.IO.dll</HintPath>
     </Reference>
     <Reference Include="RayCarrot.CarrotFramework.UI, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\RayCarrot.CarrotFramework.UI.1.1.0\lib\netstandard2.0\RayCarrot.CarrotFramework.UI.dll</HintPath>
@@ -160,7 +160,6 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AttachedProperties\FadeHandler.cs" />
     <Compile Include="AttachedProperties\UserLevelTag.cs" />
     <Compile Include="AttachedProperties\UserLevelTagBehavior.cs" />
     <Compile Include="Controls\BrowseBox\BrowseBox.xaml.cs">
@@ -213,8 +212,8 @@
     <Compile Include="Framework\Implementations\DefaultWPFBrowseUIManager.cs" />
     <Compile Include="Framework\Implementations\DefaultWPFMessageUIManager.cs" />
     <Compile Include="Framework\WPFRegistryPaths.cs" />
-    <Compile Include="Helpers\BaseAttachedProperty.cs" />
     <Compile Include="Helpers\BaseValueConverter.cs" />
+    <Compile Include="Helpers\BindingProxy.cs" />
     <Compile Include="ValidationRules\Files and Directories\DirectoryExistsAndNotEmptyValidationRule.cs" />
     <Compile Include="ValidationRules\Files and Directories\DirectoryExistsValidationRule.cs" />
     <Compile Include="ValidationRules\Files and Directories\FileExistsAndNotEmptyValidationRule.cs" />
@@ -292,11 +291,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\Fody.3.2.12\build\Fody.targets" Condition="Exists('..\..\packages\Fody.3.2.12\build\Fody.targets')" />
-  <Import Project="..\..\packages\Fody.3.2.17\build\Fody.targets" Condition="Exists('..\..\packages\Fody.3.2.17\build\Fody.targets')" />
+  <Import Project="..\..\packages\Fody.3.3.0\build\Fody.targets" Condition="Exists('..\..\packages\Fody.3.3.0\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\Fody.3.2.17\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Fody.3.2.17\build\Fody.targets'))" />
+    <Error Condition="!Exists('..\..\packages\Fody.3.3.0\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Fody.3.3.0\build\Fody.targets'))" />
+    <Error Condition="!Exists('..\..\packages\PropertyChanged.Fody.2.5.14\build\PropertyChanged.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\PropertyChanged.Fody.2.5.14\build\PropertyChanged.Fody.props'))" />
   </Target>
 </Project>
