--- a/RayCarrot.WPF/packages.config
+++ b/RayCarrot.WPF/packages.config
@@ -1,36 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ByteSize" version="1.3.0" targetFramework="net472" />
-  <package id="Fody" version="3.3.2" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Configuration" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Console" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Debug" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.EventLog" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.6" targetFramework="net472" />
+  <package id="Fody" version="3.3.3" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Console" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Debug" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.EventLog" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net472" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net472" />
-  <package id="RayCarrot.CarrotFramework" version="1.1.0" targetFramework="net472" />
-  <package id="RayCarrot.CarrotFramework.IO" version="1.1.1" targetFramework="net472" />
-  <package id="RayCarrot.CarrotFramework.UI" version="1.1.0" targetFramework="net472" />
-  <package id="RayCarrot.Windows.Registry" version="1.0.0" targetFramework="net472" />
-  <package id="RayCarrot.Windows.Shell" version="1.0.0" targetFramework="net472" />
+  <package id="RayCarrot.CarrotFramework" version="2.0.0" targetFramework="net472" />
+  <package id="RayCarrot.Windows.Registry" version="2.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.EventLog" version="4.5.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
