--- a/RayCarrot.WPF/packages.config
+++ b/RayCarrot.WPF/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ByteSize" version="1.3.0" targetFramework="net472" />
-  <package id="Fody" version="3.3.3" targetFramework="net472" developmentDependency="true" />
+  <package id="Fody" version="3.3.5" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net472" />
@@ -26,8 +29,9 @@
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net472" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
+  <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net472" />
   <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net472" />
-  <package id="RayCarrot.CarrotFramework" version="2.0.0" targetFramework="net472" />
+  <package id="RayCarrot.CarrotFramework" version="2.0.3" targetFramework="net472" />
   <package id="RayCarrot.Windows.Registry" version="2.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
