--- a/RayCarrot.WPF/packages.config
+++ b/RayCarrot.WPF/packages.config
@@ -29,11 +29,20 @@
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net472" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
-  <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net472" />
+  <package id="Nito.AsyncEx" version="5.0.0" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Context" version="5.0.0" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Coordination" version="5.0.0" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Interop.WaitHandles" version="5.0.0" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Oop" version="5.0.0" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Tasks" version="5.0.0" targetFramework="net472" />
+  <package id="Nito.Cancellation" version="1.0.5" targetFramework="net472" />
+  <package id="Nito.Collections.Deque" version="1.0.4" targetFramework="net472" />
+  <package id="Nito.Disposables" version="2.0.0" targetFramework="net472" />
   <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net472" />
-  <package id="RayCarrot.CarrotFramework" version="2.1.2" targetFramework="net472" />
+  <package id="RayCarrot.CarrotFramework" version="2.1.6" targetFramework="net472" />
   <package id="RayCarrot.Windows.Registry" version="2.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.EventLog" version="4.5.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.5.1" targetFramework="net472" />
